--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,6 @@
+Babel==0.9.6
 Flask==0.9
+Flask-Babel==0.8
 Flask-FlatPages==0.3
 Frozen-Flask==0.9
 Jinja2==2.6
@@ -7,4 +9,6 @@ PyYAML==3.10
 Werkzeug==0.8.3
 argparse==1.2.1
 distribute==0.6.24
+pytz==2012j
+speaklater==1.3
 wsgiref==0.1.2
