--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,5 @@
 Babel==0.9.6
+Fabric==1.5.3
 Flask==0.9
 Flask-Babel==0.8
 Flask-FlatPages==0.3
@@ -9,6 +10,8 @@ PyYAML==3.10
 Werkzeug==0.8.3
 argparse==1.2.1
 distribute==0.6.24
+paramiko==1.9.0
+pycrypto==2.6
 pytz==2012j
 speaklater==1.3
 wsgiref==0.1.2
